# wombat

./: .gitignore  INSTALL.md  README.md  a.out  lmao.cpp  mpwindid.txt  windowid.txt
Axolotl/: Axolotl.pro  DataPage.qml  HomeForm.ui.qml  MusicPage.qml  forkbomb.cpp  forkbomb.h  main.cpp  main.qml  mainmenu.qml  musicpage.qml  qml.qrc
Axolotl1.1/: axolotl.pro  data.cpp  data.h  data.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  musicpage.cpp  musicpage.h  musicpage.ui  viewer.cpp  viewer.ui
build-Axolotl-Desktop_Qt_5_10_0_GCC_64bit-Debug/: Axolotl  Makefile  moc_forkbomb.cpp  qrc_qml.cpp
build-Axolotl-Desktop_Qt_5_5_1_GCC_64bit2-Debug/: Axolotl  moc_forkbomb.cpp
build-Axolotl-JetsonTX2-Debug/: Axolotl  Makefile  dashcamd  datad  qrc_qml.cpp
build-axolotl-JetsonTX2-Debug/: Makefile  ui_data.h  ui_mainwindow.h  untitled
build-axolotl-KitRules-Debug/: Axolotl  Makefile  moc_ahrs.cpp  moc_data.cpp  moc_mainwindow.cpp  moc_musicpage.cpp  moc_viewer.cpp  ui_ahrs.h  ui_data.h  ui_mainwindow.h  ui_musicpage.h  ui_viewer.h
data_logging/: daemon_launcher.cpp  daemon_manager.cpp  dashcam_logger.cpp  data_logger.cpp  data_logger_pyhelper.cpp  data_obd_dtc.py  data_obd_logger.py  installdep.sh
documentation/: DEVELOPER_GUIDE.md  FORMATTING.md  GUIDE.md  INSTALL.md  INSTALL_GUIDE.md  USER_GUIDE.md  boilerplate.txt
install_tools/: install1.sh
requirements_document/: gantt.xlsx  requirements.tex
source/: Makefile  README.md  a.out  axolotl_bt_camera  backup_cam_helper  dcd  (+48 more)
source/um6/: .travis.yml  CMakeLists.txt
source/um6/src/: comms.cpp  imu.cpp
(+554 files in other folders)
